create my personal web site in angular

--- a/angular.json
+++ b/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "personal-web-site"
+  "defaultProject": "personal-web-site",
+  "cli": {
+    "analytics": false
+  }
 }
